syntax = "proto3";

import "google/protobuf/empty.proto";

option go_package = "github.com/jdxj/sign/internal/proto/crontab";

service CrontabService {
  rpc CreateTask(CreateTaskRep) returns(CreateTaskRsp);
  rpc GetTasks(GetTasksReq) returns(GetTasksRsp);
  rpc DeleteTask(DeleteTaskReq) returns(google.protobuf.Empty);
}

enum Domain {
  UnknownDomain = 0;

  BILI = 101;
  HPI  = 201;
  STG  = 301;
  V2EX = 401;
}

enum TaskKind {
  UnknownTaskKind = 0;
  // bili
  BILISign   = 102;
  BILIBCount = 103;
  // 黑客派
  HPISign = 202;
  // Go 语言中文网
  STGSign = 302;
  // V2ex
  V2EXSign = 402;
}

message Task {
  int64 TaskID = 1;
  int64 UserID = 2;
  string Describe = 3;
  TaskKind Kind = 4;
  string Spec = 5;
  int64 SecretID = 6;
}

message CreateTaskRep {
  Task Task = 1;
}

message CreateTaskRsp {
  int64 TaskID = 1;
}

message GetTasksReq {
  int64 UserID = 1;
}

message GetTasksRsp {
  repeated Task List = 1;
}

message DeleteTaskReq {
  int64 TaskID = 1;
}